private-chain/consensus/environment/private/full-2/patches/ingress_grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consensus-grpc-ingress
spec:
  tls:
  - hosts:
    - grpc-2-private.consensus.celestia-private.com
    secretName: consensus-grpc-tls-1
  rules:
  - host: grpc-2-private.consensus.celestia-private.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consensus-api
            port:
              name: grpc
