private-chain/consensus/environment/private/full-2/patches/ingress_rpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consensus-rpc-ingress
spec:
  tls:
  - hosts:
    - rpc-2-private.consensus.celestia-private.com
    secretName: consensus-rpc-tls-2
  rules:
  - host: rpc-2-private.consensus.celestia-private.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consensus-api
            port:
              name: rpc
